3b40a7f824b90c4fa92dd7bf3902a3c5bdd41c4b output figure update
52f1f3b866b094bcd2333ceb0f850bcece2f1756 Update README.md
78a04cec9aae57af36ba6068671a11f7a585d7b3 output figure
91449171454183b7836a471e85e717064236ca52 images
2fd041c46b68061e84ad80e1b614e262a8b64df1 README.md update
27c6d1bef86fbc125e7e203a71ade1e89c4eafed Readme update
122e361a2dd93482caf0e566b902c830dec12b79 includes population
2cfcdf40d9f4883503d7a699895b2b02889e46a8 Clean
d9bab24fe8ade0b4da4882715a075345097c8948 For any mechanism
007a11c5e5b106e85e40989e270438cb7f7d91d1 For GNU
e0c1cd9e625a81955b0b692ac3d9774ef1a08c37 Parallel OMP
b6223e8b24cf4f60e6d1c1d068211081734cf3d7 Make fil update
e2c205d53ddea5388eb3cc534e2e5bc77eac75ad Makefiles update
c6edae8f332168fed02fe5b06989fcce99a4b688 Make update
3a915ff0b1dbf686e1a543c258c92e406862e9c5 Update in files
bf26b1e03b3f1bb748f034d60c642f63f25796f5 for golfo
c95bb16a34d92a6b87ef78457bafc1e7b3e102fc Merge branch 'master' of github.com:JoseAgustin/interpola
e23e923a6b817f56a2e0eaf68a6cc71b3aeb659b actualiza
ef2071144678ce839c46c54415e84d02cd8bd089 license
a30c77e30012285bb517e3a9e80eed0d98231160 Update ignore files
c0ad6ea94a086d1ecd164f2d3398cdc5bb7cb0e3 Reading and storing additional vars
66b3b928b1ef42a8f90eae79caf4f798a98315ee Documentation
aeb749ef45fee1dab6b22ba88331de495718847f Update gitignore
39e0c6cf66c9e159e13f353b1067df061bd544b3 first commit