@@ -1,310 +1,0 @@
-This file contains any messages produced by compilers while
-running configure, to aid debugging if configure makes a mistake.
-
-It was created by interpola configure 2.0, which was
-generated by GNU Autoconf 2.69.  Invocation command line was
-
-  $ ./configure FCFLAGS=-I/usr/local/include -L/usr/local/lib LDFLAGS=-lnetcdff --no-create --no-recursion
-
-## --------- ##
-## Platform. ##
-## --------- ##
-
-hostname = FQAM-18.local
-uname -m = x86_64
-uname -r = 19.5.0
-uname -s = Darwin
-uname -v = Darwin Kernel Version 19.5.0: Tue May 26 20:41:44 PDT 2020; root:xnu-6153.121.2~2/RELEASE_X86_64
-
-/usr/bin/uname -p = i386
-/bin/uname -X     = unknown
-
-/bin/arch              = unknown
-/usr/bin/arch -k       = unknown
-/usr/convex/getsysinfo = unknown
-/usr/bin/hostinfo      = Mach kernel version:
-	 Darwin Kernel Version 19.5.0: Tue May 26 20:41:44 PDT 2020; root:xnu-6153.121.2~2/RELEASE_X86_64
-Kernel configured for up to 4 processors.
-2 processors are physically available.
-4 processors are logically available.
-Processor type: x86_64h (Intel x86-64h Haswell)
-Processors active: 0 1 2 3
-Primary memory available: 16.00 gigabytes
-Default processor set: 446 tasks, 1623 threads, 4 processors
-Load average: 2.34, Mach factor: 1.65
-/bin/machine           = unknown
-/usr/bin/oslevel       = unknown
-/bin/universe          = unknown
-
-PATH: /opt/ncl/bin
-PATH: /usr/local/bin
-PATH: /usr/bin
-PATH: /bin
-PATH: /usr/sbin
-PATH: /sbin
-PATH: /Library/TeX/texbin
-PATH: /opt/X11/bin
-PATH: /Library/Apple/usr/bin
-
-
-## ----------- ##
-## Core tests. ##
-## ----------- ##
-
-configure:1863: checking for a BSD-compatible install
-configure:1931: result: /usr/bin/install -c
-configure:1942: checking whether build environment is sane
-configure:1997: result: yes
-configure:2148: checking for a thread-safe mkdir -p
-configure:2187: result: ./install-sh -c -d
-configure:2194: checking for gawk
-configure:2224: result: no
-configure:2194: checking for mawk
-configure:2224: result: no
-configure:2194: checking for nawk
-configure:2224: result: no
-configure:2194: checking for awk
-configure:2210: found /usr/bin/awk
-configure:2221: result: awk
-configure:2232: checking whether make sets $(MAKE)
-configure:2254: result: yes
-configure:2283: checking whether make supports nested variables
-configure:2300: result: yes
-configure:2427: checking whether ln -s works
-configure:2431: result: yes
-configure:2438: checking whether make sets $(MAKE)
-configure:2460: result: yes
-configure:2522: checking for gfortran
-configure:2538: found /usr/local/bin/gfortran
-configure:2549: result: gfortran
-configure:2575: checking for Fortran compiler version
-configure:2584: gfortran --version >&5
-GNU Fortran (Homebrew GCC 9.3.0_1) 9.3.0
-Copyright (C) 2019 Free Software Foundation, Inc.
-This is free software; see the source for copying conditions.  There is NO
-warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-
-configure:2595: $? = 0
-configure:2584: gfortran -v >&5
-Using built-in specs.
-COLLECT_GCC=gfortran
-COLLECT_LTO_WRAPPER=/usr/local/Cellar/gcc/9.3.0_1/libexec/gcc/x86_64-apple-darwin19/9.3.0/lto-wrapper
-Target: x86_64-apple-darwin19
-Configured with: ../configure --build=x86_64-apple-darwin19 --prefix=/usr/local/Cellar/gcc/9.3.0_1 --libdir=/usr/local/Cellar/gcc/9.3.0_1/lib/gcc/9 --disable-nls --enable-checking=release --enable-languages=c,c++,objc,obj-c++,fortran --program-suffix=-9 --with-gmp=/usr/local/opt/gmp --with-mpfr=/usr/local/opt/mpfr --with-mpc=/usr/local/opt/libmpc --with-isl=/usr/local/opt/isl --with-system-zlib --with-pkgversion='Homebrew GCC 9.3.0_1' --with-bugurl=https://github.com/Homebrew/homebrew-core/issues --disable-multilib --with-native-system-header-dir=/usr/include --with-sysroot=/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk SED=/usr/bin/sed
-Thread model: posix
-gcc version 9.3.0 (Homebrew GCC 9.3.0_1) 
-configure:2595: $? = 0
-configure:2584: gfortran -V >&5
-gfortran: error: unrecognized command line option '-V'
-gfortran: fatal error: no input files
-compilation terminated.
-configure:2595: $? = 1
-configure:2584: gfortran -qversion >&5
-gfortran: error: unrecognized command line option '-qversion'; did you mean '--version'?
-gfortran: fatal error: no input files
-compilation terminated.
-configure:2595: $? = 1
-configure:2610: checking whether the Fortran compiler works
-configure:2632: gfortran -I/usr/local/include -L/usr/local/lib -lnetcdff  conftest.f  >&5
-configure:2636: $? = 0
-configure:2684: result: yes
-configure:2687: checking for Fortran compiler default output file name
-configure:2689: result: a.out
-configure:2695: checking for suffix of executables
-configure:2702: gfortran -o conftest -I/usr/local/include -L/usr/local/lib -lnetcdff  conftest.f  >&5
-configure:2706: $? = 0
-configure:2728: result: 
-configure:2744: checking whether we are cross compiling
-configure:2752: gfortran -o conftest -I/usr/local/include -L/usr/local/lib -lnetcdff  conftest.f  >&5
-configure:2756: $? = 0
-configure:2763: ./conftest
-configure:2767: $? = 0
-configure:2782: result: no
-configure:2787: checking for suffix of object files
-configure:2803: gfortran -c -I/usr/local/include -L/usr/local/lib  conftest.f >&5
-configure:2807: $? = 0
-configure:2828: result: o
-configure:2836: checking whether we are using the GNU Fortran compiler
-configure:2849: gfortran -c -I/usr/local/include -L/usr/local/lib  conftest.F >&5
-configure:2849: $? = 0
-configure:2858: result: yes
-configure:2864: checking whether gfortran accepts -g
-configure:2875: gfortran -c -g  conftest.f >&5
-configure:2875: $? = 0
-configure:2883: result: yes
-configure:2932: checking for gfortran option to support OpenMP
-configure:2947: gfortran -o conftest -I/usr/local/include -L/usr/local/lib -lnetcdff  conftest.f  >&5
-conftest.f:5:9:
-
-    5 |       tid = 42
-      |         1
-Error: Symbol 'tid' at (1) has no IMPLICIT type
-configure:2947: $? = 1
-configure: failed program was:
-| 
-|       program main
-|       implicit none
-| !$    integer tid
-|       tid = 42
-|       call omp_set_num_threads(2)
-|       end
-| 
-configure:2965: gfortran -o conftest -I/usr/local/include -L/usr/local/lib -fopenmp -lnetcdff  conftest.f  >&5
-configure:2965: $? = 0
-configure:2979: result: -fopenmp
-configure:2992: checking whether the Fortran 90 compiler (gfortran -I/usr/local/include -L/usr/local/lib -lnetcdff) works
-configure:3003: gfortran -o conftest -I/usr/local/include -L/usr/local/lib -lnetcdff  conftest.f  >&5
-configure:3003: $? = 0
-configure:3006: result: yes
-configure:3020: checking for -lnetcdff usage in gfortran 
-configure:3033: gfortran -o conftest -I/usr/local/include -L/usr/local/lib -lnetcdff  conftest.f  >&5
-configure:3033: $? = 0
-configure:3036: result: yes
-configure:3203: checking that generated files are newer than configure
-configure:3209: result: done
-configure:3224: creating ./config.status
-
-## ---------------- ##
-## Cache variables. ##
-## ---------------- ##
-
-ac_cv_env_FCFLAGS_set=set
-ac_cv_env_FCFLAGS_value='-I/usr/local/include -L/usr/local/lib'
-ac_cv_env_FC_set=
-ac_cv_env_FC_value=
-ac_cv_env_LDFLAGS_set=set
-ac_cv_env_LDFLAGS_value=-lnetcdff
-ac_cv_env_LIBS_set=
-ac_cv_env_LIBS_value=
-ac_cv_env_build_alias_set=
-ac_cv_env_build_alias_value=
-ac_cv_env_host_alias_set=
-ac_cv_env_host_alias_value=
-ac_cv_env_target_alias_set=
-ac_cv_env_target_alias_value=
-ac_cv_fc_compiler_gnu=yes
-ac_cv_objext=o
-ac_cv_path_install='/usr/bin/install -c'
-ac_cv_prog_AWK=awk
-ac_cv_prog_ac_ct_FC=gfortran
-ac_cv_prog_fc_g=yes
-ac_cv_prog_fc_openmp=-fopenmp
-ac_cv_prog_make_make_set=yes
-am_cv_make_support_nested_variables=yes
-ax_cv_prog_fc_works=yes
-
-## ----------------- ##
-## Output variables. ##
-## ----------------- ##
-
-ACLOCAL='${SHELL} /Users/agustin/proyectos/interpola/missing aclocal-1.16'
-AMTAR='$${TAR-tar}'
-AM_BACKSLASH='\'
-AM_DEFAULT_V='$(AM_DEFAULT_VERBOSITY)'
-AM_DEFAULT_VERBOSITY='1'
-AM_V='$(V)'
-AUTOCONF='${SHELL} /Users/agustin/proyectos/interpola/missing autoconf'
-AUTOHEADER='${SHELL} /Users/agustin/proyectos/interpola/missing autoheader'
-AUTOMAKE='${SHELL} /Users/agustin/proyectos/interpola/missing automake-1.16'
-AWK='awk'
-CYGPATH_W='echo'
-DEFS='-DPACKAGE_NAME=\"interpola\" -DPACKAGE_TARNAME=\"interpola\" -DPACKAGE_VERSION=\"2.0\" -DPACKAGE_STRING=\"interpola\ 2.0\" -DPACKAGE_BUGREPORT=\"agustin@atmosfera.unam.mx\" -DPACKAGE_URL=\"https://github.com/JoseAgustin/interpola\" -DPACKAGE=\"interpola\" -DVERSION=\"2.0\"'
-ECHO_C='\c'
-ECHO_N=''
-ECHO_T=''
-EXEEXT=''
-FC='gfortran'
-FCFLAGS='-I/usr/local/include -L/usr/local/lib'
-INSTALL_DATA='${INSTALL} -m 644'
-INSTALL_PROGRAM='${INSTALL}'
-INSTALL_SCRIPT='${INSTALL}'
-INSTALL_STRIP_PROGRAM='$(install_sh) -c -s'
-LDFLAGS='-lnetcdff'
-LIBOBJS=''
-LIBS=''
-LN_S='ln -s'
-LTLIBOBJS=''
-MAKEINFO='${SHELL} /Users/agustin/proyectos/interpola/missing makeinfo'
-MKDIR_P='./install-sh -c -d'
-OBJEXT='o'
-OPENMP_FCFLAGS='-fopenmp'
-PACKAGE='interpola'
-PACKAGE_BUGREPORT='agustin@atmosfera.unam.mx'
-PACKAGE_NAME='interpola'
-PACKAGE_STRING='interpola 2.0'
-PACKAGE_TARNAME='interpola'
-PACKAGE_URL='https://github.com/JoseAgustin/interpola'
-PACKAGE_VERSION='2.0'
-PATH_SEPARATOR=':'
-SET_MAKE=''
-SHELL='/bin/sh'
-STRIP=''
-VERSION='2.0'
-ac_ct_FC='gfortran'
-am__EXEEXT_FALSE=''
-am__EXEEXT_TRUE='#'
-am__isrc=''
-am__leading_dot='.'
-am__tar='$${TAR-tar} chof - "$$tardir"'
-am__untar='$${TAR-tar} xf -'
-bindir='${exec_prefix}/bin'
-build_alias=''
-datadir='${datarootdir}'
-datarootdir='${prefix}/share'
-docdir='${datarootdir}/doc/${PACKAGE_TARNAME}'
-dvidir='${docdir}'
-exec_prefix='${prefix}'
-host_alias=''
-htmldir='${docdir}'
-includedir='${prefix}/include'
-infodir='${datarootdir}/info'
-install_sh='${SHELL} /Users/agustin/proyectos/interpola/install-sh'
-libdir='${exec_prefix}/lib'
-libexecdir='${exec_prefix}/libexec'
-localedir='${datarootdir}/locale'
-localstatedir='${prefix}/var'
-mandir='${datarootdir}/man'
-mkdir_p='$(MKDIR_P)'
-oldincludedir='/usr/include'
-pdfdir='${docdir}'
-prefix='/usr/local'
-program_transform_name='s,x,x,'
-psdir='${docdir}'
-sbindir='${exec_prefix}/sbin'
-sharedstatedir='${prefix}/com'
-sysconfdir='${prefix}/etc'
-target_alias=''
-
-## ----------- ##
-## confdefs.h. ##
-## ----------- ##
-
-/* confdefs.h */
-#define PACKAGE_NAME "interpola"
-#define PACKAGE_TARNAME "interpola"
-#define PACKAGE_VERSION "2.0"
-#define PACKAGE_STRING "interpola 2.0"
-#define PACKAGE_BUGREPORT "agustin@atmosfera.unam.mx"
-#define PACKAGE_URL "https://github.com/JoseAgustin/interpola"
-#define PACKAGE "interpola"
-#define VERSION "2.0"
-
-configure: exit 0
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by interpola config.status 2.0, which was
-generated by GNU Autoconf 2.69.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status 
-
-on FQAM-18.local
-
-config.status:754: creating Makefile
-config.status:754: creating src/Makefile
