@@ -1,3 +1,9 @@
+b93e94ed6df4d9402f6c0662b620685b8e6afcf1 Auto configuration
+c1cbf1c81083fbd29f1cfa2bebbc4670e0b890db Merge branch 'master' of github.com:JoseAgustin/interpola
+fecf7f5b2bc7448c08d1a285f7fd05b70e071377 file copy
+bfb51f37118e2fda64506567c877d6fa70ba8326 Auto configuration
+f2920f52b40177a53c20679ac6603705384acff4 Update README.md
+73d90225f6c5ce0da86c1542d224e9e89ede9713 Update 2 README.md
 3b40a7f824b90c4fa92dd7bf3902a3c5bdd41c4b output figure update
 52f1f3b866b094bcd2333ceb0f850bcece2f1756 Update README.md
 78a04cec9aae57af36ba6068671a11f7a585d7b3 output figure
